# CMU-VisualLearning

./: .gitignore  README.md
lab1/: pyproject.toml  requirements.txt
lab1/reference/detection/: detection_helper.py  detection_utils.py  one_stage_detector.py  train.py
lab1/reference/detection/detection_logs/: events.out.tfevents.1726952178.model-tts-v1.3461586.0  events.out.tfevents.1726954989.model-tts-v1.3471024.0  events.out.tfevents.1726955596.model-tts-v1.3473234.0  events.out.tfevents.1726969387.model-tts-v1.3511154.0  events.out.tfevents.1726969534.model-tts-v1.3512036.0  events.out.tfevents.1727197002.model-tts-v1.4158736.0  events.out.tfevents.1727197964.model-tts-v1.4163584.0  events.out.tfevents.1727288684.model-tts-v1.200448.0  events.out.tfevents.1727288696.model-tts-v1.200535.0  events.out.tfevents.1727292595.model-tts-v1.220663.0  events.out.tfevents.1727292799.model-tts-v1.221791.0  events.out.tfevents.1727292945.model-tts-v1.222355.0  events.out.tfevents.1727293623.model-tts-v1.225085.0  events.out.tfevents.1727296840.model-tts-v1.234340.0  events.out.tfevents.1727297047.model-tts-v1.235049.0  events.out.tfevents.1727297241.model-tts-v1.236913.0  events.out.tfevents.1727297358.model-tts-v1.237695.0  events.out.tfevents.1727925517.mlops-test-instance-gpu.167311.0  events.out.tfevents.1727925563.mlops-test-instance-gpu.167794.0
lab1/reference/detection_logs/: events.out.tfevents.1727626652.mlops-test-instance-gpu.178895.0
lab1/reference/latex/: main.tex
lab1/reference/q1_q2_classification/: simple_cnn.py  train_q1.py  train_q2.py  trainer.py  tsne_visualize.py  utils.py  voc_dataset.py
lab1/reference/q1_q2_classification/detection/: detection_helper.py  detection_utils.py  one_stage_detector.py  train.py
lab1/reference/runs/Oct03_02-21-56_mlops-test-instance-gpu/: events.out.tfevents.1727922118.mlops-test-instance-gpu.142168.0
lab1/reference/runs/Oct03_02-38-05_mlops-test-instance-gpu/: events.out.tfevents.1727923086.mlops-test-instance-gpu.150638.0
lab1/reference/runs/Oct03_02-38-23_mlops-test-instance-gpu/: events.out.tfevents.1727923104.mlops-test-instance-gpu.150862.0
lab1/reference/runs/Oct03_02-47-34_mlops-test-instance-gpu/: events.out.tfevents.1727923655.mlops-test-instance-gpu.155294.0
lab1/reference/runs/Oct03_02-49-55_mlops-test-instance-gpu/: events.out.tfevents.1727923796.mlops-test-instance-gpu.156409.0
lab1/reference/runs/Oct03_02-58-35_mlops-test-instance-gpu/: events.out.tfevents.1727924317.mlops-test-instance-gpu.160378.0
lab1/reference/runs/fig1_best_model/: events.out.tfevents.1727919266.mlops-test-instance-gpu.121254.0
lab1/reference/runs/fig1_with_aug/: events.out.tfevents.1727919064.mlops-test-instance-gpu.119771.0
lab2/: .gitignore  pyproject.toml  setup.sh
lab2/diffusion/: inference.py  model.py
lab2/gan/: networks.py  q1_3.py  q1_4.py  q1_5.py  train.py  utils.py
lab2/vae/: model.py  train.py  utils.py
(+89 files in other folders)
